@startuml 
skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Planning"{
    entity Route
    entity Path
    class PathID
    class StartWHId
    class DestinationWHId
    class PathDistance
    class PathTravelTime
    class WastedEnergy
    class ExtraTravelTime
}

package "<<aggregate>> Logistics"{
    entity DeliveryPlan

}

entity DeliveryPlan <<entity>> <<Root>>{

}

entity Route <<entity>> <<root>>{

}

entity Path <<entity>> {
    -Active
}

class PathID <<(V,#FF8B40) value object>>
class StartWHId <<(V,#FF8B40) value object>>
class DestinationWHId <<(V,#FF8B40) value object>>
class PathDistance <<(V,#FF8B40) value object>>
class PathTravelTime <<(V,#FF8B40) value object>>
class WastedEnergy <<(V,#FF8B40) value object>>
class ExtraTravelTime <<(V,#FF8B40) value object>>


Route "1..*" -> "1..*" Path : is composed 
Route "1" <-- "1" DeliveryPlan : follows     

Path --> "1" ExtraTravelTime
Path --> "1" WastedEnergy
Path --> "1" PathTravelTime
Path --> "1" PathDistance
Path --> "1" DestinationWHId
Path --> "1" StartWHId
Path --> "1" PathID
@enduml